--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "db:down": "docker compose -f infra/docker-compose.dev.yml down"
   },
   "devDependencies": {
-    "turbo": "^2.0.0",
-    "@types/node": "^22.10.0"
+    "@types/node": "^22.10.0",
+    "turbo": "^2.0.0"
   }
 }
